Updated to Java 17, Spring Boot 2.7.2, and JUnit 5